k8s/api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: usecase01-node-api
  namespace: ns-rch-01
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: usecase01-node-api
    spec:
      containers:
      - name: usecase01-node-api
        image: "mycluster.icp:8500/ns-rch-01/usecase01-node-api:v1"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
