k8s/mdb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: usecase01-mongodb
  namespace: ns-rch-01
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: usecase01-mongodb
    spec:
      containers:
      - name: usecase01-mongodb 
        image: "mycluster.icp:8500/ns-rch-01/usecase01-mongodb:v1"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017
