k8s/mdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usecase01-mongodb-service
  namespace: ns-rch-01
spec:
  type: ClusterIP
  ports:
   - name: http
     protocol: TCP
     port: 27017
     targetPort: 27017
  selector:
     app: usecase01-mongodb
