k8s/allin1-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: usecase01-ingress
 namespace: ns-rch-01
 annotations:
   ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /usecase01
        backend:
         serviceName: usecase01-service
         servicePort: 3000
